:bug: fix (funds): SX-774 Balance detail not responsive

--- a/src/app/modules/funds/shared-funds/components/fund-balance-detail/fund-balance-detail.component.scss
+++ b/src/app/modules/funds/shared-funds/components/fund-balance-detail/fund-balance-detail.component.scss
@@ -35,8 +35,5 @@
         }
       }
     }
-    &__main_content {
-      --overflow: hidden;
-    }
   }
 }
